--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   get: ^4.6.5
   introduction_screen: ^3.1.7
   flutter_svg: ^2.0.4
-  
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
